Add directions endpoint