@@ -1,7 +1,10 @@
 package com.techchallenge4.ms_logistica.mapper;
 
+import com.techchallenge4.ms_logistica.api.v1.response.RotaResponse;
 import com.techchallenge4.ms_logistica.client.response.OptimizeResponse;
 import com.techchallenge4.ms_logistica.configuration.MappingConfig;
+import com.techchallenge4.ms_logistica.domain.Entregador;
+import com.techchallenge4.ms_logistica.domain.Origem;
 import com.techchallenge4.ms_logistica.domain.Parada;
 import com.techchallenge4.ms_logistica.domain.Rota;
 import org.mapstruct.Mapper;
@@ -9,23 +12,26 @@ import org.mapstruct.Mapping;
 import org.mapstruct.Named;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-@Mapper(config = MappingConfig.class)
-public interface RouteMapper {
+import static java.util.Objects.nonNull;
+
+@Mapper(config = MappingConfig.class, uses = {ParadaMapper.class, OrigemMapper.class})
+public interface RotaMapper {
 
     String JOB = "job";
 
-    @Mapping(target = "origem", ignore = true)
+    RotaResponse toRotaResponse(Rota rota);
+
+    @Mapping(target = "id", ignore = true)
     @Mapping(target = "paradas", source = "route.steps", qualifiedByName = "mapParadas")
-    Rota toRota(OptimizeResponse.Route route);
+    Rota toRota(OptimizeResponse.Route route, Entregador entregador, Origem origem);
 
     @Named("mapParadas")
     default List<Parada> mapParadas(List<OptimizeResponse.Route.Step> steps) {
         return steps.stream()
                 .filter(step -> JOB.equalsIgnoreCase(step.getType()))
-                .map(step -> createParadaFromStep(step, steps.indexOf(step) + 1))  // Passing 1-based index
-                .collect(Collectors.toList());
+                .map(step -> createParadaFromStep(step, steps.indexOf(step) + 1))
+                .toList();
     }
 
     default Parada createParadaFromStep(OptimizeResponse.Route.Step step, long sequencia) {
@@ -37,7 +43,7 @@ public interface RouteMapper {
                 .sequencia(sequencia)
                 .latitude(latitude)
                 .longitude(longitude)
-                .pedidoId(step.getJob() != null ? String.valueOf(step.getJob()) : null)
+                .pedidoId(nonNull(step.getJob()) ? Long.valueOf(step.getJob()) : null)
                 .build();
     }
 }
